# care-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  verify-clone.ps1
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260715_1659_a4a075a39043_initial_schema.py  20260716_1731_c5662290beb3_add_conversation_call_state.py  20260716_1800_e7f1a2b3c4d5_add_metric_events.py  20260716_1830_f8a2b3c4d5e6_add_availability_offers.py  20260716_1900_a9b3c4d5e6f7_add_mock_pms_sync.py  20260717_1000_b1c2d3e4f5a6_add_patient_no_overlap_constraint.py  20260717_1730_c4d5e6f7a8b9_add_pms_lifecycle_operations.py
backend/app/: deps.py  main.py
backend/app/api/: admin.py  health.py  prometheus_metrics.py  tools.py  webhooks_bolna.py  webhooks_retell.py
backend/app/core/: config.py  exceptions.py  guardrails.py  logging.py  metrics.py  middleware.py  observability.py
backend/app/db/: base.py  session.py
backend/app/pms/: __init__.py  mock.py  protocol.py
backend/app/repositories/: appointment_repository.py  availability_offer_repository.py  call_repository.py  followup_repository.py  metrics_repository.py  patient_repository.py  pms_repository.py  scheduling_repository.py
backend/app/schemas/: admin_pms.py  conversation.py  tools.py
backend/app/services/: admin_pms_service.py  (+7 more)
backend/evaluation/: README.md  cases.json  evaluation_report.json  evaluation_report.md  evaluation_summary.csv  metrics.py  report.py  runner.py
backend/scripts/: retry_pms_syncs.py  seed_clinic.py  test_deployed_api.py
backend/tests/: conftest.py
(+79 files in other folders)
