[project]
name = "care-ai-backend"
version = "0.1.0"
description = "Voice AI receptionist backend -- API, scheduling, and PMS integration for Care AI"
requires-python = ">=3.12"
readme = "README.md"

# Kept in sync with requirements.txt, which is the source of truth for
# what actually gets installed in the Docker image. This block exists
# so editors/type-checkers resolve the project correctly and so the
# package is `pip install -e .`-able for local (non-Docker) dev.
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "structlog==24.4.0",
    "prometheus-client==0.21.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# FastAPI dependency injection uses `Depends(...)` in function defaults, and
# generated migration/evaluation code intentionally contains long SQL/payload lines.
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
